--- a/src/main/resources/com/uaa/idejavafx/primary.fxml
+++ b/src/main/resources/com/uaa/idejavafx/primary.fxml
@@ -11,10 +11,11 @@
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import org.fxmisc.richtext.CodeArea?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uaa.idejavafx.PrimaryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.uaa.idejavafx.controllers.PrimaryController">
    <children>
       <SplitPane dividerPositions="0.12311557788944724, 0.8040201005025126" layoutX="23.0" layoutY="14.0" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -24,16 +25,34 @@
                     <menus>
                       <Menu mnemonicParsing="false" text="Archivo">
                         <items>
-                          <MenuItem mnemonicParsing="false" onAction="#openNewFile" text="Nuevo" />
-                              <MenuItem mnemonicParsing="false" onAction="#openFile" text="Abrir..." />
-                              <MenuItem mnemonicParsing="false" onAction="#saveFile" text="Guardar" />
-                              <MenuItem mnemonicParsing="false" onAction="#saveFileAs" text="Guardar Como..." />
+                          <MenuItem mnemonicParsing="false" onAction="#openNewFile" text="Nuevo">
+                                 <accelerator>
+                                    <KeyCodeCombination alt="UP" code="N" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                                 </accelerator></MenuItem>
+                              <MenuItem mnemonicParsing="false" onAction="#openFile" text="Abrir...">
+                                 <accelerator>
+                                    <KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                                 </accelerator></MenuItem>
+                              <MenuItem mnemonicParsing="false" onAction="#saveFile" text="Guardar">
+                                 <accelerator>
+                                    <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                                 </accelerator></MenuItem>
+                              <MenuItem mnemonicParsing="false" onAction="#saveFileAs" text="Guardar Como...">
+                                 <accelerator>
+                                    <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="DOWN" shortcut="UP" />
+                                 </accelerator></MenuItem>
                         </items>
                       </Menu>
                       <Menu mnemonicParsing="false" text="Editar">
                         <items>
-                          <MenuItem mnemonicParsing="false" text="Deshacer" />
-                              <MenuItem mnemonicParsing="false" text="Rehacer" />
+                          <MenuItem mnemonicParsing="false" onAction="#undo" text="Deshacer">
+                                 <accelerator>
+                                    <KeyCodeCombination alt="UP" code="Z" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                                 </accelerator></MenuItem>
+                              <MenuItem mnemonicParsing="false" onAction="#redo" text="Rehacer">
+                                 <accelerator>
+                                    <KeyCodeCombination alt="UP" code="Y" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                                 </accelerator></MenuItem>
                               <MenuItem mnemonicParsing="false" text="Cortar" />
                               <MenuItem mnemonicParsing="false" text="Pegar" />
                         </items>
@@ -66,7 +85,7 @@
                                  </image></ImageView>
                            </graphic>
                         </Button>
-                        <Button fx:id="open" mnemonicParsing="false" onAction="#openFile">
+                        <Button fx:id="openButton" mnemonicParsing="false" onAction="#openFile">
                            <graphic>
                               <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -114,7 +133,19 @@
                     <items>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                            <children>
-                              <CodeArea layoutX="110.0" layoutY="29.0" prefHeight="258.4" prefWidth="379.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <TabPane prefHeight="257.6" prefWidth="407.2" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <tabs>
+                                  <Tab fx:id="tabTitle" text="*">
+                                    <content>
+                                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                             <children>
+                                                <CodeArea fx:id="codeText" prefHeight="227.2" prefWidth="407.2" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                             </children>
+                                          </AnchorPane>
+                                    </content>
+                                  </Tab>
+                                </tabs>
+                              </TabPane>
                            </children></AnchorPane>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
