--- a/src/main/resources/com/uaa/idejavafx/primary.fxml
+++ b/src/main/resources/com/uaa/idejavafx/primary.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -122,6 +124,16 @@
                               </ImageView>
                            </graphic>
                         </SplitMenuButton>
+                        <Label fx:id="rowLabel" text="Linea: -">
+                           <padding>
+                              <Insets left="20.0" />
+                           </padding>
+                        </Label>
+                        <Label fx:id="colLabel" text="Columna: -">
+                           <padding>
+                              <Insets left="15.0" />
+                           </padding>
+                        </Label>
                     </items>
                   </ToolBar>
                </children>
