--- a/src/main/resources/com/uaa/idejavafx/primary.fxml
+++ b/src/main/resources/com/uaa/idejavafx/primary.fxml
@@ -73,7 +73,7 @@
                       </Menu>
                     </menus>
                   </MenuBar>
-                  <ToolBar layoutY="22.0" prefHeight="37.0" prefWidth="598.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="22.0">
+                  <ToolBar layoutY="22.0" prefHeight="37.0" prefWidth="598.0" styleClass="bg-primary" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="22.0">
                     <items>
                       <Button fx:id="newFile" mnemonicParsing="false" onAction="#openNewFile">
                            <graphic>
