--- a/src/main/resources/com/uaa/idejavafx/primary.fxml
+++ b/src/main/resources/com/uaa/idejavafx/primary.fxml
@@ -220,7 +220,7 @@
                <children>
                   <Pane prefHeight="26.0" prefWidth="598.0">
                      <children>
-                        <Label fx:id="totRows" layoutX="163.0" text="Lineas: -">
+                        <Label fx:id="totalLabel" layoutX="163.0" text="Lineas: -, Columnas: -">
                            <font>
                               <Font size="11.0" />
                            </font>
@@ -228,23 +228,7 @@
                               <Insets left="2.0" top="4.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="totCols" layoutX="240.0" text="Columnas: -">
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                           <padding>
-                              <Insets left="2.0" top="4.0" />
-                           </padding>
-                        </Label>
-                        <Label fx:id="rowLabel" layoutX="10.0" text="Ln: -">
-                           <padding>
-                              <Insets left="2.0" top="4.0" />
-                           </padding>
-                           <font>
-                              <Font size="11.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="colLabel" ellipsisString="" layoutX="70.0" text="Col: -">
+                        <Label fx:id="currentLabel" layoutX="10.0" text="Ln: -, Col: -">
                            <padding>
                               <Insets left="2.0" top="4.0" />
                            </padding>
