Function to select compiler

--- a/src/main/resources/com/uaa/idejavafx/primary.fxml
+++ b/src/main/resources/com/uaa/idejavafx/primary.fxml
@@ -69,6 +69,7 @@
                               <MenuItem mnemonicParsing="false" text="Sintáctico" />
                               <MenuItem mnemonicParsing="false" text="Semántico" />
                               <MenuItem mnemonicParsing="false" text="Compilar" />
+                              <MenuItem mnemonicParsing="false" onAction="#selectCompiler" text="Seleccionar" />
                         </items>
                       </Menu>
                     </menus>
