--- a/src/main/resources/com/uaa/idejavafx/primary.fxml
+++ b/src/main/resources/com/uaa/idejavafx/primary.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.KeyCodeCombination?>
@@ -117,7 +118,7 @@
                            </graphic>
                         </Button>
                         <Button fx:id="lexicalButton" mnemonicParsing="false" onAction="#runLexical" text="Léxico" />
-                        <Button mnemonicParsing="false" text="Sintáctico" />
+                        <Button mnemonicParsing="false" onAction="#runSyntactic" text="Sintáctico" />
                         <Button mnemonicParsing="false" text="Semántico" />
                         <SplitMenuButton mnemonicParsing="false" onAction="#run" text="run">
                           <items>
@@ -174,7 +175,7 @@
                                     <content>
                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                              <children>
-                                                <CodeArea prefHeight="301.6" prefWidth="184.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                <TreeView fx:id="syntacticTree" prefHeight="295.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                              </children></AnchorPane>
                                     </content>
                                   </Tab>
