--- a/src/main/resources/com/uaa/idejavafx/primary.fxml
+++ b/src/main/resources/com/uaa/idejavafx/primary.fxml
@@ -161,9 +161,9 @@
                            </children></AnchorPane>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <TabPane layoutX="-8.0" layoutY="14.0" prefHeight="258.4" prefWidth="192.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TabPane fx:id="compilerTabPane" layoutX="-8.0" layoutY="14.0" prefHeight="258.4" prefWidth="192.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <tabs>
-                                  <Tab text="Léxico">
+                                  <Tab fx:id="lexicalTab" text="Léxico">
                                     <content>
                                       <AnchorPane fx:id="pane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                              <children>
@@ -171,7 +171,7 @@
                                              </children></AnchorPane>
                                     </content>
                                   </Tab>
-                                  <Tab text="Sintáctico">
+                                  <Tab fx:id="syntacticTab" text="Sintáctico">
                                     <content>
                                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                              <children>
