--- a/src/main/resources/com/uaa/idejavafx/primary.fxml
+++ b/src/main/resources/com/uaa/idejavafx/primary.fxml
@@ -119,7 +119,7 @@
                         </Button>
                         <Button fx:id="lexicalButton" mnemonicParsing="false" onAction="#runLexical" text="Léxico" />
                         <Button mnemonicParsing="false" onAction="#runSyntactic" text="Sintáctico" />
-                        <Button mnemonicParsing="false" text="Semántico" />
+                        <Button mnemonicParsing="false" onAction="#runSemantic" text="Semántico" />
                         <SplitMenuButton mnemonicParsing="false" onAction="#run" text="run">
                           <items>
                             <MenuItem mnemonicParsing="false" text="Compilar" />
@@ -179,7 +179,7 @@
                                              </children></AnchorPane>
                                     </content>
                                   </Tab>
-                                    <Tab text="Semántico">
+                                    <Tab fx:id="semanticTab" text="Semántico">
                                       <content>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                              <children>
